<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电子皮肤</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tactile_main">TactileMainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_general_info">GeneralInfoActivity</string>
    <string name="title_activity_visual_info">VisualInfoActivity</string>
    <string name="title_activity_detail_info">DetailInfoActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="add_values">Add</string>

    <string name="label_temp_name_str">温度</string>
    <string name="label_hum_name_str">湿度</string>
    <string name="label_temp_unit_str">℃</string>
    <string name="label_hum_unit_str">%rH</string>
    <string name="label_header_unit_str">%</string>
    <string name="label_detail_temp_name_str">温度</string>
    <string name="label_detail_hum_name_str">湿度</string>
    <string name="label_detail_header_name_str">第三渠道</string>

    <string name="label_set_wel">设置页面，将来可以进行相关控制和传感器接收设置。</string>
    <string name="label_history_area_str">点击查看历史信息</string>
    <string name="label_realtime_area_str">返回查看实时信息</string>
    <string name="button_history_area_one_hour">一小时内</string>
    <string name="button_history_area_one_day">今天内</string>
    <string name="button_history_area_one_month">这个月内</string>
    <string name="label_history_area_detail_query_day_name">按天查询</string>
    <string name="label_history_area_detail_query_hour_name">按小时查询</string>
    <string name="button_query_str">查询</string>

</resources>
